--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -15,4 +15,5 @@ jobs:
           pip install -r requirements.txt
           python train.py
           
-          cat metrics.txt
+          cat metrics.txt > reports.md
+          cml-send-comment reports.md
